--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^8.13.0",
     "@react-three/postprocessing": "^2.14.6",
     "framer-motion": "^10.12.12",
+    "gltfpack": "^0.19.1",
     "maath": "^0.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
